--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>첫번째 젝트555</h1>
-    <p>dndnddn</p>
+    <h1>My First Heading</h1>
+    <p>My First Paragragh</p>
+    <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202302/02/9a1bd083-7c68-4822-a149-b9f6f7d93447.jpg">
   </body>
 </html>
